# Competency-Question-Manager-Backend

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  openapi.yaml  pyproject.toml  requirements.txt
src/app/: __init__.py  app.py
src/app/domain/accounts/: dtos.py  exceptions.py  guards.py  mails.py  models.py  services.py
src/app/domain/accounts/authentication/: exceptions.py  middleware.py  services.py
src/app/domain/accounts/controllers/: __init__.py  user_controller.py
src/app/domain/comments/: controller.py  dtos.py  models.py  services.py
src/app/domain/consolidations/: controllers.py  dtos.py  models.py  services.py
src/app/domain/groups/: controllers.py  dtos.py  exceptions.py  guards.py  mails.py  middleware.py  models.py  services.py
src/app/domain/projects/: controllers.py  dtos.py  exceptions.py  guards.py  mails.py  middleware.py  models.py  services.py
src/app/domain/questions/: controller.py  dtos.py  models.py  services.py
src/app/domain/rating/: controller.py  dtos.py  models.py  services.py
src/app/domain/ratings/: controller.py  dtos.py  models.py  services.py
src/app/domain/terms/: controllers.py  dtos.py  models.py  services.py
src/app/domain/versions/: models.py
src/app/lib/: dto.py  mails.py  middleware.py  orm.py  services.py  utils.py
src/tests/integration/: test_comments.py
tests/integration/: _fixtures.py  accounts.py  test_accounts.py  test_projects.py
